hw6 align fix

--- a/06_Homework 6/css/style.css
+++ b/06_Homework 6/css/style.css
@@ -10,7 +10,7 @@ body {
   width: 910px;
   height: 1310px;
   background-color: white;
-  margin: 0 46px 0 46px;
+  margin: 0 auto 0 auto;
   position: relative;
 }
 
